[package]
name = "bevy_test_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.11.3"}
bevy_ecs_tilemap = {version ="0.11.0"}
tiled = { version = "0.11.1", default-features = false }
anyhow = { version = "1.0" }